--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@types/dompurify": "^2.2.1",
     "sass": "^1.32.8",
     "typescript": "^4.2.2",
     "vite": "^2.0.1"
@@ -16,8 +17,9 @@
     "@lifaon/rx-dom": "lastest"
   },
   "dependencies": {
-    "tslib": "^2.1.0",
-    "@lifaon/rx-js-light": "lastest",
-    "@lifaon/rx-dom": "lastest"
+    "@lifaon/rx-dom": "1.0.0-alpha.2",
+    "@lifaon/rx-js-light": "1.0.0-beta.2",
+    "dompurify": "^2.2.6",
+    "tslib": "^2.1.0"
   }
 }
