--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "@lifaon/rx-dom": "lastest"
   },
   "dependencies": {
-    "@lifaon/rx-dom": "1.0.0-alpha.2",
-    "@lifaon/rx-js-light": "1.0.0-beta.2",
+    "@lifaon/rx-dom": "1.0.0",
+    "@lifaon/rx-js-light": "1.0.0",
+    "@lifaon/rx-js-light-shortcuts": "1.0.0",
     "dompurify": "^2.2.7",
     "tslib": "^2.1.0"
   }
