--- a/package.json
+++ b/package.json
@@ -17,27 +17,29 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@types/dompurify": "^2.2.1",
+    "@types/estree": "^0.0.47",
     "@types/requestidlecallback": "^0.3.1",
     "@types/resize-observer-browser": "^0.1.5",
+    "acorn": "^8.1.0",
+    "acorn-walk": "^8.0.2",
+    "astring": "^1.7.0",
     "btoa": "^1.2.1",
     "puppeteer": "^8.0.0",
     "sass": "^1.32.8",
     "typescript": "^4.2.3",
-    "vite": "^2.1.2",
-    "acorn": "^8.1.0",
-    "acorn-walk": "^8.0.2",
-    "@types/estree": "^0.0.47",
-    "astring": "^1.7.0"
+    "vite": "^2.1.2"
   },
   "__dependencies": {
     "@lifaon/rx-js-light": "lastest",
-    "@lifaon/rx-dom": "lastest"
+    "@lifaon/rx-dom": "lastest",
+    "@lifaon/rx-js-light-shortcuts": "1.0.0"
   },
   "dependencies": {
     "@lifaon/rx-dom": "1.0.0",
     "@lifaon/rx-js-light": "1.0.0",
     "@lifaon/rx-js-light-shortcuts": "1.0.0",
     "dompurify": "^2.2.7",
+    "rxjs": "^6.6.7",
     "tslib": "^2.1.0"
   }
 }
