--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "noUnusedLocals": false,
     "suppressImplicitAnyIndexErrors": true,
     "useUnknownInCatchVariables": true,
-    "exactOptionalPropertyTypes": true,
+    "exactOptionalPropertyTypes": false,
     "noImplicitOverride": true,
     "moduleResolution": "node",
     "stripInternal": false,
